--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -26,110 +26,109 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>reviewerID</th>\n",
-       "      <th>asin</th>\n",
-       "      <th>reviewerName</th>\n",
-       "      <th>helpful</th>\n",
-       "      <th>reviewText</th>\n",
-       "      <th>overall</th>\n",
-       "      <th>summary</th>\n",
-       "      <th>unixReviewTime</th>\n",
-       "      <th>reviewTime</th>\n",
+       "      <th>Id</th>\n",
+       "      <th>ProductId</th>\n",
+       "      <th>UserId</th>\n",
+       "      <th>ProfileName</th>\n",
+       "      <th>HelpfulnessNumerator</th>\n",
+       "      <th>HelpfulnessDenominator</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>A2IBPI20UZIR0U</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>cassandra tu \"Yeah, well, that's just like, u...</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>Not much to write about here, but it does exac...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>good</td>\n",
-       "      <td>1393545600</td>\n",
-       "      <td>02 28, 2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>B001E4KFG0</td>\n",
+       "      <td>A3SGXH7AUHU8GW</td>\n",
+       "      <td>delmartian</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1303862400</td>\n",
+       "      <td>Good Quality Dog Food</td>\n",
+       "      <td>I have bought several of the Vitality canned d...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>A14VAT5EAX3D9S</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>Jake</td>\n",
-       "      <td>[13, 14]</td>\n",
-       "      <td>The product does exactly as it should and is q...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Jake</td>\n",
-       "      <td>1363392000</td>\n",
-       "      <td>03 16, 2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>B00813GRG4</td>\n",
+       "      <td>A1D87F6ZCVE5NK</td>\n",
+       "      <td>dll pa</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1346976000</td>\n",
+       "      <td>Not as Advertised</td>\n",
+       "      <td>Product arrived labeled as Jumbo Salted Peanut...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>A195EZSQDW3E21</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>Rick Bennette \"Rick Bennette\"</td>\n",
-       "      <td>[1, 1]</td>\n",
-       "      <td>The primary job of this device is to block the...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>It Does The Job Well</td>\n",
-       "      <td>1377648000</td>\n",
-       "      <td>08 28, 2013</td>\n",
+       "      <td>3</td>\n",
+       "      <td>B000LQOCH0</td>\n",
+       "      <td>ABXLMWJIXXAIN</td>\n",
+       "      <td>Natalia Corres \"Natalia Corres\"</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1219017600</td>\n",
+       "      <td>\"Delight\" says it all</td>\n",
+       "      <td>This is a confection that has been around a fe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>A2C00NNG1ZQQG2</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>RustyBill \"Sunday Rocker\"</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>Nice windscreen protects my MXL mic and preven...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>GOOD WINDSCREEN FOR THE MONEY</td>\n",
-       "      <td>1392336000</td>\n",
-       "      <td>02 14, 2014</td>\n",
+       "      <td>4</td>\n",
+       "      <td>B000UA0QIQ</td>\n",
+       "      <td>A395BORC6FGVXV</td>\n",
+       "      <td>Karl</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1307923200</td>\n",
+       "      <td>Cough Medicine</td>\n",
+       "      <td>If you are looking for the secret ingredient i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>A94QU4C90B1AX</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>SEAN MASLANKA</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>This pop filter is great. It looks and perform...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>No more pops when I record my vocals.</td>\n",
-       "      <td>1392940800</td>\n",
-       "      <td>02 21, 2014</td>\n",
+       "      <td>5</td>\n",
+       "      <td>B006K2ZZ7K</td>\n",
+       "      <td>A1UQRSCLF8GW1T</td>\n",
+       "      <td>Michael D. Bigham \"M. Wassir\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1350777600</td>\n",
+       "      <td>Great taffy</td>\n",
+       "      <td>Great taffy at a great price.  There was a wid...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       reviewerID        asin  \\\n",
-       "0  A2IBPI20UZIR0U  1384719342   \n",
-       "1  A14VAT5EAX3D9S  1384719342   \n",
-       "2  A195EZSQDW3E21  1384719342   \n",
-       "3  A2C00NNG1ZQQG2  1384719342   \n",
-       "4   A94QU4C90B1AX  1384719342   \n",
+       "   Id   ProductId          UserId                      ProfileName  \\\n",
+       "0   1  B001E4KFG0  A3SGXH7AUHU8GW                       delmartian   \n",
+       "1   2  B00813GRG4  A1D87F6ZCVE5NK                           dll pa   \n",
+       "2   3  B000LQOCH0   ABXLMWJIXXAIN  Natalia Corres \"Natalia Corres\"   \n",
+       "3   4  B000UA0QIQ  A395BORC6FGVXV                             Karl   \n",
+       "4   5  B006K2ZZ7K  A1UQRSCLF8GW1T    Michael D. Bigham \"M. Wassir\"   \n",
        "\n",
-       "                                       reviewerName   helpful  \\\n",
-       "0  cassandra tu \"Yeah, well, that's just like, u...    [0, 0]   \n",
-       "1                                              Jake  [13, 14]   \n",
-       "2                     Rick Bennette \"Rick Bennette\"    [1, 1]   \n",
-       "3                         RustyBill \"Sunday Rocker\"    [0, 0]   \n",
-       "4                                     SEAN MASLANKA    [0, 0]   \n",
+       "   HelpfulnessNumerator  HelpfulnessDenominator  Score        Time  \\\n",
+       "0                     1                       1      5  1303862400   \n",
+       "1                     0                       0      1  1346976000   \n",
+       "2                     1                       1      4  1219017600   \n",
+       "3                     3                       3      2  1307923200   \n",
+       "4                     0                       0      5  1350777600   \n",
        "\n",
-       "                                          reviewText  overall  \\\n",
-       "0  Not much to write about here, but it does exac...      5.0   \n",
-       "1  The product does exactly as it should and is q...      5.0   \n",
-       "2  The primary job of this device is to block the...      5.0   \n",
-       "3  Nice windscreen protects my MXL mic and preven...      5.0   \n",
-       "4  This pop filter is great. It looks and perform...      5.0   \n",
-       "\n",
-       "                                 summary  unixReviewTime   reviewTime  \n",
-       "0                                   good      1393545600  02 28, 2014  \n",
-       "1                                   Jake      1363392000  03 16, 2013  \n",
-       "2                   It Does The Job Well      1377648000  08 28, 2013  \n",
-       "3          GOOD WINDSCREEN FOR THE MONEY      1392336000  02 14, 2014  \n",
-       "4  No more pops when I record my vocals.      1392940800  02 21, 2014  "
+       "                 Summary                                               Text  \n",
+       "0  Good Quality Dog Food  I have bought several of the Vitality canned d...  \n",
+       "1      Not as Advertised  Product arrived labeled as Jumbo Salted Peanut...  \n",
+       "2  \"Delight\" says it all  This is a confection that has been around a fe...  \n",
+       "3         Cough Medicine  If you are looking for the secret ingredient i...  \n",
+       "4            Great taffy  Great taffy at a great price.  There was a wid...  "
       ]
      },
      "execution_count": 1,
@@ -141,7 +140,7 @@
     "import json\n",
     "import pandas as pd\n",
     "\n",
-    "path = './data_amazon_review/Musical_instruments_reviews.csv'\n",
+    "path = './data_amazon_review/fine_food_reviews.csv'\n",
     "\n",
     "user_data = pd.read_csv(path)\n",
     "user_data.head()"
@@ -157,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,115 +180,128 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>reviewerID</th>\n",
-       "      <th>asin</th>\n",
-       "      <th>reviewerName</th>\n",
-       "      <th>helpful</th>\n",
-       "      <th>overall</th>\n",
-       "      <th>unixReviewTime</th>\n",
-       "      <th>reviewTime</th>\n",
-       "      <th>review</th>\n",
+       "      <th>Id</th>\n",
+       "      <th>ProductId</th>\n",
+       "      <th>UserId</th>\n",
+       "      <th>ProfileName</th>\n",
+       "      <th>HelpfulnessNumerator</th>\n",
+       "      <th>HelpfulnessDenominator</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A2IBPI20UZIR0U</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>cassandra tu \"Yeah, well, that's just like, u...</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1393545600</td>\n",
-       "      <td>02 28, 2014</td>\n",
-       "      <td>Not much to write about here, but it does exac...</td>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>B0009XLVG0</td>\n",
+       "      <td>A327PCT23YH90</td>\n",
+       "      <td>LT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1339545600</td>\n",
+       "      <td>My Cats Are Not Fans of the New Food</td>\n",
+       "      <td>My cats have been happily eating Felidae Plati...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A14VAT5EAX3D9S</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>Jake</td>\n",
-       "      <td>[13, 14]</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1363392000</td>\n",
-       "      <td>03 16, 2013</td>\n",
-       "      <td>The product does exactly as it should and is q...</td>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>B001GVISJM</td>\n",
+       "      <td>A2MUGFV2TDQ47K</td>\n",
+       "      <td>Lynrie \"Oh HELL no\"</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1268352000</td>\n",
+       "      <td>Strawberry Twizzlers - Yummy</td>\n",
+       "      <td>The Strawberry Twizzlers are my guilty pleasur...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A195EZSQDW3E21</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>Rick Bennette \"Rick Bennette\"</td>\n",
-       "      <td>[1, 1]</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1377648000</td>\n",
-       "      <td>08 28, 2013</td>\n",
-       "      <td>The primary job of this device is to block the...</td>\n",
+       "      <th>23</th>\n",
+       "      <td>24</td>\n",
+       "      <td>B001GVISJM</td>\n",
+       "      <td>AJ613OLZZUG7V</td>\n",
+       "      <td>Mare's</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1304467200</td>\n",
+       "      <td>Twizzlers</td>\n",
+       "      <td>I love this candy.  After weight watchers I ha...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A2C00NNG1ZQQG2</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>RustyBill \"Sunday Rocker\"</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1392336000</td>\n",
-       "      <td>02 14, 2014</td>\n",
-       "      <td>Nice windscreen protects my MXL mic and preven...</td>\n",
+       "      <th>43</th>\n",
+       "      <td>44</td>\n",
+       "      <td>B001EO5QW8</td>\n",
+       "      <td>A17DW6SUOC70DJ</td>\n",
+       "      <td>Mother of 9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1255392000</td>\n",
+       "      <td>Good Hot Breakfast</td>\n",
+       "      <td>McCann's Oatmeal is a good quality choice.  Ou...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A94QU4C90B1AX</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>SEAN MASLANKA</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1392940800</td>\n",
-       "      <td>02 21, 2014</td>\n",
-       "      <td>This pop filter is great. It looks and perform...</td>\n",
+       "      <th>45</th>\n",
+       "      <td>46</td>\n",
+       "      <td>B001EO5QW8</td>\n",
+       "      <td>A39Z97950MCTQE</td>\n",
+       "      <td>K. A. Freel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1205193600</td>\n",
+       "      <td>Hearty Oatmeal</td>\n",
+       "      <td>This seems a little more wholesome than some o...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       reviewerID        asin  \\\n",
-       "0  A2IBPI20UZIR0U  1384719342   \n",
-       "1  A14VAT5EAX3D9S  1384719342   \n",
-       "2  A195EZSQDW3E21  1384719342   \n",
-       "3  A2C00NNG1ZQQG2  1384719342   \n",
-       "4   A94QU4C90B1AX  1384719342   \n",
+       "    Id   ProductId          UserId          ProfileName  HelpfulnessNumerator  \\\n",
+       "12  13  B0009XLVG0   A327PCT23YH90                   LT                     1   \n",
+       "14  15  B001GVISJM  A2MUGFV2TDQ47K  Lynrie \"Oh HELL no\"                     4   \n",
+       "23  24  B001GVISJM   AJ613OLZZUG7V               Mare's                     0   \n",
+       "43  44  B001EO5QW8  A17DW6SUOC70DJ          Mother of 9                     0   \n",
+       "45  46  B001EO5QW8  A39Z97950MCTQE          K. A. Freel                     0   \n",
        "\n",
-       "                                       reviewerName   helpful  overall  \\\n",
-       "0  cassandra tu \"Yeah, well, that's just like, u...    [0, 0]      5.0   \n",
-       "1                                              Jake  [13, 14]      5.0   \n",
-       "2                     Rick Bennette \"Rick Bennette\"    [1, 1]      5.0   \n",
-       "3                         RustyBill \"Sunday Rocker\"    [0, 0]      5.0   \n",
-       "4                                     SEAN MASLANKA    [0, 0]      5.0   \n",
+       "    HelpfulnessDenominator  Score        Time  \\\n",
+       "12                       1      1  1339545600   \n",
+       "14                       5      5  1268352000   \n",
+       "23                       0      5  1304467200   \n",
+       "43                       0      5  1255392000   \n",
+       "45                       0      3  1205193600   \n",
        "\n",
-       "   unixReviewTime   reviewTime  \\\n",
-       "0      1393545600  02 28, 2014   \n",
-       "1      1363392000  03 16, 2013   \n",
-       "2      1377648000  08 28, 2013   \n",
-       "3      1392336000  02 14, 2014   \n",
-       "4      1392940800  02 21, 2014   \n",
+       "                                 Summary  \\\n",
+       "12  My Cats Are Not Fans of the New Food   \n",
+       "14          Strawberry Twizzlers - Yummy   \n",
+       "23                             Twizzlers   \n",
+       "43                    Good Hot Breakfast   \n",
+       "45                        Hearty Oatmeal   \n",
        "\n",
-       "                                              review  \n",
-       "0  Not much to write about here, but it does exac...  \n",
-       "1  The product does exactly as it should and is q...  \n",
-       "2  The primary job of this device is to block the...  \n",
-       "3  Nice windscreen protects my MXL mic and preven...  \n",
-       "4  This pop filter is great. It looks and perform...  "
+       "                                                 Text  \n",
+       "12  My cats have been happily eating Felidae Plati...  \n",
+       "14  The Strawberry Twizzlers are my guilty pleasur...  \n",
+       "23  I love this candy.  After weight watchers I ha...  \n",
+       "43  McCann's Oatmeal is a good quality choice.  Ou...  \n",
+       "45  This seems a little more wholesome than some o...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "user_data['review'] = user_data['reviewText'] + user_data['summary']\n",
-    "user_data.drop(columns=['reviewText', 'summary'], inplace=True)\n",
-    "user_data.head()"
+    "sampled_data = user_data.sample(n=100000)\n",
+    "# sampled_data.sort_index().head()\n",
+    "sampled_data.reset_index()\n",
+    "sampled_data.head()"
    ]
   },
   {
@@ -459,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
