saved LSTM result

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -140,7 +140,7 @@
     "import json\n",
     "import pandas as pd\n",
     "\n",
-    "path = './data_amazon_review/fine_food_reviews.csv'\n",
+    "path = './data/fine_foods/fine_food_reviews.csv'\n",
     "\n",
     "user_data = pd.read_csv(path)\n",
     "user_data.head()"
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,105 +194,105 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>13</td>\n",
-       "      <td>B0009XLVG0</td>\n",
-       "      <td>A327PCT23YH90</td>\n",
-       "      <td>LT</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1339545600</td>\n",
-       "      <td>My Cats Are Not Fans of the New Food</td>\n",
-       "      <td>My cats have been happily eating Felidae Plati...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>15</td>\n",
-       "      <td>B001GVISJM</td>\n",
-       "      <td>A2MUGFV2TDQ47K</td>\n",
-       "      <td>Lynrie \"Oh HELL no\"</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1268352000</td>\n",
-       "      <td>Strawberry Twizzlers - Yummy</td>\n",
-       "      <td>The Strawberry Twizzlers are my guilty pleasur...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>24</td>\n",
-       "      <td>B001GVISJM</td>\n",
-       "      <td>AJ613OLZZUG7V</td>\n",
-       "      <td>Mare's</td>\n",
+       "      <th>0</th>\n",
+       "      <td>151584</td>\n",
+       "      <td>B000HTFEVE</td>\n",
+       "      <td>A1BQEGGHCBCRRQ</td>\n",
+       "      <td>Elaine Okupski</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
-       "      <td>1304467200</td>\n",
-       "      <td>Twizzlers</td>\n",
-       "      <td>I love this candy.  After weight watchers I ha...</td>\n",
+       "      <td>1332806400</td>\n",
+       "      <td>My second-favorite gluten-free granola</td>\n",
+       "      <td>Bakery on Main's Extreme Fruit &amp; Nut Granola h...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>44</td>\n",
-       "      <td>B001EO5QW8</td>\n",
-       "      <td>A17DW6SUOC70DJ</td>\n",
-       "      <td>Mother of 9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1255392000</td>\n",
-       "      <td>Good Hot Breakfast</td>\n",
-       "      <td>McCann's Oatmeal is a good quality choice.  Ou...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>46</td>\n",
-       "      <td>B001EO5QW8</td>\n",
-       "      <td>A39Z97950MCTQE</td>\n",
-       "      <td>K. A. Freel</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>177982</td>\n",
+       "      <td>B00099ZGFG</td>\n",
+       "      <td>A2S3Z54BI73QIK</td>\n",
+       "      <td>G. Kerr</td>\n",
        "      <td>3</td>\n",
-       "      <td>1205193600</td>\n",
-       "      <td>Hearty Oatmeal</td>\n",
-       "      <td>This seems a little more wholesome than some o...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1197072000</td>\n",
+       "      <td>Great lean snack - ostrich!</td>\n",
+       "      <td>These meat snacks are fabulous and incredibly ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>538490</td>\n",
+       "      <td>B000E4ARCS</td>\n",
+       "      <td>A3BX21NIPUDXS5</td>\n",
+       "      <td>John</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1291593600</td>\n",
+       "      <td>Great product, excellent flavor</td>\n",
+       "      <td>I bought this jerky to satisfy a craving that ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>212032</td>\n",
+       "      <td>B000CNB4LE</td>\n",
+       "      <td>A1KZJ2Q8PKRIU6</td>\n",
+       "      <td>Cobra23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1281312000</td>\n",
+       "      <td>What did they do???</td>\n",
+       "      <td>This product was great in the TetraPak.  Now i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>197792</td>\n",
+       "      <td>B0078Y6CN0</td>\n",
+       "      <td>A2AZU4JHTWYRY5</td>\n",
+       "      <td>Practical Woman</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1296950400</td>\n",
+       "      <td>Guests tell me they love this coffee!</td>\n",
+       "      <td>I'm allergic to coffee so I can't speak from p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Id   ProductId          UserId          ProfileName  HelpfulnessNumerator  \\\n",
-       "12  13  B0009XLVG0   A327PCT23YH90                   LT                     1   \n",
-       "14  15  B001GVISJM  A2MUGFV2TDQ47K  Lynrie \"Oh HELL no\"                     4   \n",
-       "23  24  B001GVISJM   AJ613OLZZUG7V               Mare's                     0   \n",
-       "43  44  B001EO5QW8  A17DW6SUOC70DJ          Mother of 9                     0   \n",
-       "45  46  B001EO5QW8  A39Z97950MCTQE          K. A. Freel                     0   \n",
+       "       Id   ProductId          UserId      ProfileName  HelpfulnessNumerator  \\\n",
+       "0  151584  B000HTFEVE  A1BQEGGHCBCRRQ   Elaine Okupski                     0   \n",
+       "1  177982  B00099ZGFG  A2S3Z54BI73QIK          G. Kerr                     3   \n",
+       "2  538490  B000E4ARCS  A3BX21NIPUDXS5             John                     1   \n",
+       "3  212032  B000CNB4LE  A1KZJ2Q8PKRIU6          Cobra23                     0   \n",
+       "4  197792  B0078Y6CN0  A2AZU4JHTWYRY5  Practical Woman                     0   \n",
        "\n",
-       "    HelpfulnessDenominator  Score        Time  \\\n",
-       "12                       1      1  1339545600   \n",
-       "14                       5      5  1268352000   \n",
-       "23                       0      5  1304467200   \n",
-       "43                       0      5  1255392000   \n",
-       "45                       0      3  1205193600   \n",
+       "   HelpfulnessDenominator  Score        Time  \\\n",
+       "0                       0      5  1332806400   \n",
+       "1                       3      5  1197072000   \n",
+       "2                       1      5  1291593600   \n",
+       "3                       0      1  1281312000   \n",
+       "4                       0      4  1296950400   \n",
        "\n",
-       "                                 Summary  \\\n",
-       "12  My Cats Are Not Fans of the New Food   \n",
-       "14          Strawberry Twizzlers - Yummy   \n",
-       "23                             Twizzlers   \n",
-       "43                    Good Hot Breakfast   \n",
-       "45                        Hearty Oatmeal   \n",
+       "                                  Summary  \\\n",
+       "0  My second-favorite gluten-free granola   \n",
+       "1             Great lean snack - ostrich!   \n",
+       "2         Great product, excellent flavor   \n",
+       "3                     What did they do???   \n",
+       "4   Guests tell me they love this coffee!   \n",
        "\n",
-       "                                                 Text  \n",
-       "12  My cats have been happily eating Felidae Plati...  \n",
-       "14  The Strawberry Twizzlers are my guilty pleasur...  \n",
-       "23  I love this candy.  After weight watchers I ha...  \n",
-       "43  McCann's Oatmeal is a good quality choice.  Ou...  \n",
-       "45  This seems a little more wholesome than some o...  "
+       "                                                Text  \n",
+       "0  Bakery on Main's Extreme Fruit & Nut Granola h...  \n",
+       "1  These meat snacks are fabulous and incredibly ...  \n",
+       "2  I bought this jerky to satisfy a craving that ...  \n",
+       "3  This product was great in the TetraPak.  Now i...  \n",
+       "4  I'm allergic to coffee so I can't speak from p...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,13 +300,13 @@
    "source": [
     "sampled_data = user_data.sample(n=100000)\n",
     "# sampled_data.sort_index().head()\n",
-    "sampled_data.reset_index()\n",
+    "sampled_data = sampled_data.reset_index(drop=True)\n",
     "sampled_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -330,128 +330,149 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>reviewerID</th>\n",
-       "      <th>asin</th>\n",
-       "      <th>reviewerName</th>\n",
-       "      <th>helpful</th>\n",
-       "      <th>overall</th>\n",
-       "      <th>unixReviewTime</th>\n",
-       "      <th>reviewTime</th>\n",
-       "      <th>review</th>\n",
-       "      <th>sentiment</th>\n",
+       "      <th>Id</th>\n",
+       "      <th>ProductId</th>\n",
+       "      <th>UserId</th>\n",
+       "      <th>ProfileName</th>\n",
+       "      <th>HelpfulnessNumerator</th>\n",
+       "      <th>HelpfulnessDenominator</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>SummartAndText</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>A2IBPI20UZIR0U</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>cassandra tu \"Yeah, well, that's just like, u...</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1393545600</td>\n",
-       "      <td>02 28, 2014</td>\n",
-       "      <td>Not much to write about here, but it does exac...</td>\n",
-       "      <td>Positive</td>\n",
+       "      <td>151584</td>\n",
+       "      <td>B000HTFEVE</td>\n",
+       "      <td>A1BQEGGHCBCRRQ</td>\n",
+       "      <td>Elaine Okupski</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1332806400</td>\n",
+       "      <td>My second-favorite gluten-free granola</td>\n",
+       "      <td>Bakery on Main's Extreme Fruit &amp; Nut Granola h...</td>\n",
+       "      <td>My second-favorite gluten-free granolaBakery o...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>A14VAT5EAX3D9S</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>Jake</td>\n",
-       "      <td>[13, 14]</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1363392000</td>\n",
-       "      <td>03 16, 2013</td>\n",
-       "      <td>The product does exactly as it should and is q...</td>\n",
-       "      <td>Positive</td>\n",
+       "      <td>177982</td>\n",
+       "      <td>B00099ZGFG</td>\n",
+       "      <td>A2S3Z54BI73QIK</td>\n",
+       "      <td>G. Kerr</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1197072000</td>\n",
+       "      <td>Great lean snack - ostrich!</td>\n",
+       "      <td>These meat snacks are fabulous and incredibly ...</td>\n",
+       "      <td>Great lean snack - ostrich!These meat snacks a...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>A195EZSQDW3E21</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>Rick Bennette \"Rick Bennette\"</td>\n",
-       "      <td>[1, 1]</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1377648000</td>\n",
-       "      <td>08 28, 2013</td>\n",
-       "      <td>The primary job of this device is to block the...</td>\n",
-       "      <td>Positive</td>\n",
+       "      <td>538490</td>\n",
+       "      <td>B000E4ARCS</td>\n",
+       "      <td>A3BX21NIPUDXS5</td>\n",
+       "      <td>John</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1291593600</td>\n",
+       "      <td>Great product, excellent flavor</td>\n",
+       "      <td>I bought this jerky to satisfy a craving that ...</td>\n",
+       "      <td>Great product, excellent flavorI bought this j...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>A2C00NNG1ZQQG2</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>RustyBill \"Sunday Rocker\"</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1392336000</td>\n",
-       "      <td>02 14, 2014</td>\n",
-       "      <td>Nice windscreen protects my MXL mic and preven...</td>\n",
-       "      <td>Positive</td>\n",
+       "      <td>212032</td>\n",
+       "      <td>B000CNB4LE</td>\n",
+       "      <td>A1KZJ2Q8PKRIU6</td>\n",
+       "      <td>Cobra23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1281312000</td>\n",
+       "      <td>What did they do???</td>\n",
+       "      <td>This product was great in the TetraPak.  Now i...</td>\n",
+       "      <td>What did they do???This product was great in t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>A94QU4C90B1AX</td>\n",
-       "      <td>1384719342</td>\n",
-       "      <td>SEAN MASLANKA</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1392940800</td>\n",
-       "      <td>02 21, 2014</td>\n",
-       "      <td>This pop filter is great. It looks and perform...</td>\n",
-       "      <td>Positive</td>\n",
+       "      <td>197792</td>\n",
+       "      <td>B0078Y6CN0</td>\n",
+       "      <td>A2AZU4JHTWYRY5</td>\n",
+       "      <td>Practical Woman</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1296950400</td>\n",
+       "      <td>Guests tell me they love this coffee!</td>\n",
+       "      <td>I'm allergic to coffee so I can't speak from p...</td>\n",
+       "      <td>Guests tell me they love this coffee!I'm aller...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       reviewerID        asin  \\\n",
-       "0  A2IBPI20UZIR0U  1384719342   \n",
-       "1  A14VAT5EAX3D9S  1384719342   \n",
-       "2  A195EZSQDW3E21  1384719342   \n",
-       "3  A2C00NNG1ZQQG2  1384719342   \n",
-       "4   A94QU4C90B1AX  1384719342   \n",
+       "       Id   ProductId          UserId      ProfileName  HelpfulnessNumerator  \\\n",
+       "0  151584  B000HTFEVE  A1BQEGGHCBCRRQ   Elaine Okupski                     0   \n",
+       "1  177982  B00099ZGFG  A2S3Z54BI73QIK          G. Kerr                     3   \n",
+       "2  538490  B000E4ARCS  A3BX21NIPUDXS5             John                     1   \n",
+       "3  212032  B000CNB4LE  A1KZJ2Q8PKRIU6          Cobra23                     0   \n",
+       "4  197792  B0078Y6CN0  A2AZU4JHTWYRY5  Practical Woman                     0   \n",
        "\n",
-       "                                       reviewerName   helpful  overall  \\\n",
-       "0  cassandra tu \"Yeah, well, that's just like, u...    [0, 0]      5.0   \n",
-       "1                                              Jake  [13, 14]      5.0   \n",
-       "2                     Rick Bennette \"Rick Bennette\"    [1, 1]      5.0   \n",
-       "3                         RustyBill \"Sunday Rocker\"    [0, 0]      5.0   \n",
-       "4                                     SEAN MASLANKA    [0, 0]      5.0   \n",
+       "   HelpfulnessDenominator  Score        Time  \\\n",
+       "0                       0      5  1332806400   \n",
+       "1                       3      5  1197072000   \n",
+       "2                       1      5  1291593600   \n",
+       "3                       0      1  1281312000   \n",
+       "4                       0      4  1296950400   \n",
        "\n",
-       "   unixReviewTime   reviewTime  \\\n",
-       "0      1393545600  02 28, 2014   \n",
-       "1      1363392000  03 16, 2013   \n",
-       "2      1377648000  08 28, 2013   \n",
-       "3      1392336000  02 14, 2014   \n",
-       "4      1392940800  02 21, 2014   \n",
+       "                                  Summary  \\\n",
+       "0  My second-favorite gluten-free granola   \n",
+       "1             Great lean snack - ostrich!   \n",
+       "2         Great product, excellent flavor   \n",
+       "3                     What did they do???   \n",
+       "4   Guests tell me they love this coffee!   \n",
        "\n",
-       "                                              review sentiment  \n",
-       "0  Not much to write about here, but it does exac...  Positive  \n",
-       "1  The product does exactly as it should and is q...  Positive  \n",
-       "2  The primary job of this device is to block the...  Positive  \n",
-       "3  Nice windscreen protects my MXL mic and preven...  Positive  \n",
-       "4  This pop filter is great. It looks and perform...  Positive  "
+       "                                                Text  \\\n",
+       "0  Bakery on Main's Extreme Fruit & Nut Granola h...   \n",
+       "1  These meat snacks are fabulous and incredibly ...   \n",
+       "2  I bought this jerky to satisfy a craving that ...   \n",
+       "3  This product was great in the TetraPak.  Now i...   \n",
+       "4  I'm allergic to coffee so I can't speak from p...   \n",
+       "\n",
+       "                                      SummartAndText  \n",
+       "0  My second-favorite gluten-free granolaBakery o...  \n",
+       "1  Great lean snack - ostrich!These meat snacks a...  \n",
+       "2  Great product, excellent flavorI bought this j...  \n",
+       "3  What did they do???This product was great in t...  \n",
+       "4  Guests tell me they love this coffee!I'm aller...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def sentiment_classifier(row):\n",
-    "    if row['overall'] > 3.0:\n",
-    "        return 'Positive'\n",
-    "    elif row['overall'] == 3.0:\n",
-    "        return 'Neutral'\n",
-    "    else:\n",
-    "        return 'Negative'\n",
-    "    \n",
-    "user_data['sentiment'] = user_data.apply(sentiment_classifier, axis=1)\n",
-    "user_data.head()"
+    "sampled_data['SummartAndText'] = sampled_data['Summary'] + sampled_data['Text']\n",
+    "sampled_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampled_data.drop(inplace=True, columns=[\"ProfileName\"])\n",
+    "sampled_data.to_csv('./data_amazon_review/sampled_fine_food_reviews.csv')"
    ]
   }
  ],
