updated some expressions

--- a/data_visualization.ipynb
+++ b/data_visualization.ipynb
@@ -802,7 +802,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This review is voted not useful most likely because it did not reflect information on the product quality"
+    "This review is voted not useful most likely because it did not reflect information on the product quality. Delievery service quality may vary, and other users might want to learn more about the product."
    ]
   },
   {
