updating latest result

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "(568454, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -75,104 +75,104 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>98470</td>\n",
-       "      <td>B004GW6O9E</td>\n",
-       "      <td>A1KLXDCT2ZS8S1</td>\n",
-       "      <td>Imda Booyah \"booyah guy\"</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1306281600</td>\n",
-       "      <td>lara bars are the best</td>\n",
-       "      <td>i have tried about a DOZEN different gluten fr...</td>\n",
+       "      <td>495946</td>\n",
+       "      <td>B000G1766O</td>\n",
+       "      <td>A3J171NBGIBYAW</td>\n",
+       "      <td>D. Mansfield \"Book Addict\"</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1288569600</td>\n",
+       "      <td>Not what I needed</td>\n",
+       "      <td>I wanted to love. I think Amy's makes lots of ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>337957</td>\n",
-       "      <td>B0014EOU4S</td>\n",
-       "      <td>A2X4S50HN7RFVV</td>\n",
-       "      <td>symbioticKid</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1342051200</td>\n",
-       "      <td>Low sodium option is better</td>\n",
-       "      <td>Extremely good for vitamins. Tastes a bit like...</td>\n",
+       "      <td>120328</td>\n",
+       "      <td>B005K4Q37A</td>\n",
+       "      <td>A3B9OUYMXYO6OX</td>\n",
+       "      <td>three cats</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1323388800</td>\n",
+       "      <td>SPIKE this with some Irish cream liqueur</td>\n",
+       "      <td>yes, this is flavored coffee already...but, it...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>413820</td>\n",
-       "      <td>B0026KPDG8</td>\n",
-       "      <td>A2IKA1EJF14J2T</td>\n",
-       "      <td>JDMTSX</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1298246400</td>\n",
-       "      <td>I hope they are as good for you as they taste!</td>\n",
-       "      <td>As far as the ingredients are concerned, the c...</td>\n",
+       "      <td>220149</td>\n",
+       "      <td>B005BFJGJU</td>\n",
+       "      <td>A11GL3QGJ3NM44</td>\n",
+       "      <td>R. Miller</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1336348800</td>\n",
+       "      <td>Too little for the price</td>\n",
+       "      <td>Sounded like a cute non-present but was way to...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>561023</td>\n",
-       "      <td>B0012BSMHY</td>\n",
-       "      <td>A2VHBEFX94H61R</td>\n",
-       "      <td>Francine</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1302480000</td>\n",
-       "      <td>Stash Instant Green Tea</td>\n",
-       "      <td>I make a \"jug\" of this tea every morning and k...</td>\n",
+       "      <td>294777</td>\n",
+       "      <td>B005V9UG18</td>\n",
+       "      <td>A8J808KNJK4K4</td>\n",
+       "      <td>Dianna</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1346976000</td>\n",
+       "      <td>Drink Every Day</td>\n",
+       "      <td>I've been drinking the Chocolate Orgain for br...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>499810</td>\n",
-       "      <td>B000UBMO4Y</td>\n",
-       "      <td>ARYSDAZNRXN6G</td>\n",
-       "      <td>A. Crafton</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1263686400</td>\n",
-       "      <td>Make your own!</td>\n",
-       "      <td>This stuff is so bad, you may as well call it ...</td>\n",
+       "      <td>70491</td>\n",
+       "      <td>B002E0S4UW</td>\n",
+       "      <td>A3OFNY1N6I0R7A</td>\n",
+       "      <td>Fortunato</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1262044800</td>\n",
+       "      <td>Wonderful product</td>\n",
+       "      <td>My daughter loves this applesauce. We original...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Id   ProductId          UserId               ProfileName  \\\n",
-       "0   98470  B004GW6O9E  A1KLXDCT2ZS8S1  Imda Booyah \"booyah guy\"   \n",
-       "1  337957  B0014EOU4S  A2X4S50HN7RFVV              symbioticKid   \n",
-       "2  413820  B0026KPDG8  A2IKA1EJF14J2T                    JDMTSX   \n",
-       "3  561023  B0012BSMHY  A2VHBEFX94H61R                  Francine   \n",
-       "4  499810  B000UBMO4Y   ARYSDAZNRXN6G                A. Crafton   \n",
+       "       Id   ProductId          UserId                 ProfileName  \\\n",
+       "0  495946  B000G1766O  A3J171NBGIBYAW  D. Mansfield \"Book Addict\"   \n",
+       "1  120328  B005K4Q37A  A3B9OUYMXYO6OX                  three cats   \n",
+       "2  220149  B005BFJGJU  A11GL3QGJ3NM44                   R. Miller   \n",
+       "3  294777  B005V9UG18   A8J808KNJK4K4                      Dianna   \n",
+       "4   70491  B002E0S4UW  A3OFNY1N6I0R7A                   Fortunato   \n",
        "\n",
        "   HelpfulnessNumerator  HelpfulnessDenominator  Score        Time  \\\n",
-       "0                     0                       0      5  1306281600   \n",
-       "1                     0                       0      3  1342051200   \n",
-       "2                     0                       0      5  1298246400   \n",
-       "3                     3                       3      4  1302480000   \n",
-       "4                     4                       6      1  1263686400   \n",
+       "0                     2                       3      3  1288569600   \n",
+       "1                     1                       1      5  1323388800   \n",
+       "2                     2                       3      1  1336348800   \n",
+       "3                     0                       0      5  1346976000   \n",
+       "4                     0                       0      5  1262044800   \n",
        "\n",
-       "                                          Summary  \\\n",
-       "0                          lara bars are the best   \n",
-       "1                     Low sodium option is better   \n",
-       "2  I hope they are as good for you as they taste!   \n",
-       "3                         Stash Instant Green Tea   \n",
-       "4                                  Make your own!   \n",
+       "                                    Summary  \\\n",
+       "0                         Not what I needed   \n",
+       "1  SPIKE this with some Irish cream liqueur   \n",
+       "2                  Too little for the price   \n",
+       "3                           Drink Every Day   \n",
+       "4                         Wonderful product   \n",
        "\n",
        "                                                Text  \n",
-       "0  i have tried about a DOZEN different gluten fr...  \n",
-       "1  Extremely good for vitamins. Tastes a bit like...  \n",
-       "2  As far as the ingredients are concerned, the c...  \n",
-       "3  I make a \"jug\" of this tea every morning and k...  \n",
-       "4  This stuff is so bad, you may as well call it ...  "
+       "0  I wanted to love. I think Amy's makes lots of ...  \n",
+       "1  yes, this is flavored coffee already...but, it...  \n",
+       "2  Sounded like a cute non-present but was way to...  \n",
+       "3  I've been drinking the Chocolate Orgain for br...  \n",
+       "4  My daughter loves this applesauce. We original...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -226,116 +226,116 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>98470</td>\n",
-       "      <td>B004GW6O9E</td>\n",
-       "      <td>A1KLXDCT2ZS8S1</td>\n",
-       "      <td>Imda Booyah \"booyah guy\"</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1306281600</td>\n",
-       "      <td>lara bars are the best</td>\n",
-       "      <td>i have tried about a DOZEN different gluten fr...</td>\n",
-       "      <td>lara bars are the besti have tried about a DOZ...</td>\n",
+       "      <td>495946</td>\n",
+       "      <td>B000G1766O</td>\n",
+       "      <td>A3J171NBGIBYAW</td>\n",
+       "      <td>D. Mansfield \"Book Addict\"</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1288569600</td>\n",
+       "      <td>Not what I needed</td>\n",
+       "      <td>I wanted to love. I think Amy's makes lots of ...</td>\n",
+       "      <td>Not what I neededI wanted to love. I think Amy...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>337957</td>\n",
-       "      <td>B0014EOU4S</td>\n",
-       "      <td>A2X4S50HN7RFVV</td>\n",
-       "      <td>symbioticKid</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1342051200</td>\n",
-       "      <td>Low sodium option is better</td>\n",
-       "      <td>Extremely good for vitamins. Tastes a bit like...</td>\n",
-       "      <td>Low sodium option is betterExtremely good for ...</td>\n",
+       "      <td>120328</td>\n",
+       "      <td>B005K4Q37A</td>\n",
+       "      <td>A3B9OUYMXYO6OX</td>\n",
+       "      <td>three cats</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1323388800</td>\n",
+       "      <td>SPIKE this with some Irish cream liqueur</td>\n",
+       "      <td>yes, this is flavored coffee already...but, it...</td>\n",
+       "      <td>SPIKE this with some Irish cream liqueuryes, t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>413820</td>\n",
-       "      <td>B0026KPDG8</td>\n",
-       "      <td>A2IKA1EJF14J2T</td>\n",
-       "      <td>JDMTSX</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1298246400</td>\n",
-       "      <td>I hope they are as good for you as they taste!</td>\n",
-       "      <td>As far as the ingredients are concerned, the c...</td>\n",
-       "      <td>I hope they are as good for you as they taste!...</td>\n",
+       "      <td>220149</td>\n",
+       "      <td>B005BFJGJU</td>\n",
+       "      <td>A11GL3QGJ3NM44</td>\n",
+       "      <td>R. Miller</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1336348800</td>\n",
+       "      <td>Too little for the price</td>\n",
+       "      <td>Sounded like a cute non-present but was way to...</td>\n",
+       "      <td>Too little for the priceSounded like a cute no...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>561023</td>\n",
-       "      <td>B0012BSMHY</td>\n",
-       "      <td>A2VHBEFX94H61R</td>\n",
-       "      <td>Francine</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1302480000</td>\n",
-       "      <td>Stash Instant Green Tea</td>\n",
-       "      <td>I make a \"jug\" of this tea every morning and k...</td>\n",
-       "      <td>Stash Instant Green TeaI make a \"jug\" of this ...</td>\n",
+       "      <td>294777</td>\n",
+       "      <td>B005V9UG18</td>\n",
+       "      <td>A8J808KNJK4K4</td>\n",
+       "      <td>Dianna</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1346976000</td>\n",
+       "      <td>Drink Every Day</td>\n",
+       "      <td>I've been drinking the Chocolate Orgain for br...</td>\n",
+       "      <td>Drink Every DayI've been drinking the Chocolat...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>499810</td>\n",
-       "      <td>B000UBMO4Y</td>\n",
-       "      <td>ARYSDAZNRXN6G</td>\n",
-       "      <td>A. Crafton</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1263686400</td>\n",
-       "      <td>Make your own!</td>\n",
-       "      <td>This stuff is so bad, you may as well call it ...</td>\n",
-       "      <td>Make your own!This stuff is so bad, you may as...</td>\n",
+       "      <td>70491</td>\n",
+       "      <td>B002E0S4UW</td>\n",
+       "      <td>A3OFNY1N6I0R7A</td>\n",
+       "      <td>Fortunato</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1262044800</td>\n",
+       "      <td>Wonderful product</td>\n",
+       "      <td>My daughter loves this applesauce. We original...</td>\n",
+       "      <td>Wonderful productMy daughter loves this apples...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Id   ProductId          UserId               ProfileName  \\\n",
-       "0   98470  B004GW6O9E  A1KLXDCT2ZS8S1  Imda Booyah \"booyah guy\"   \n",
-       "1  337957  B0014EOU4S  A2X4S50HN7RFVV              symbioticKid   \n",
-       "2  413820  B0026KPDG8  A2IKA1EJF14J2T                    JDMTSX   \n",
-       "3  561023  B0012BSMHY  A2VHBEFX94H61R                  Francine   \n",
-       "4  499810  B000UBMO4Y   ARYSDAZNRXN6G                A. Crafton   \n",
+       "       Id   ProductId          UserId                 ProfileName  \\\n",
+       "0  495946  B000G1766O  A3J171NBGIBYAW  D. Mansfield \"Book Addict\"   \n",
+       "1  120328  B005K4Q37A  A3B9OUYMXYO6OX                  three cats   \n",
+       "2  220149  B005BFJGJU  A11GL3QGJ3NM44                   R. Miller   \n",
+       "3  294777  B005V9UG18   A8J808KNJK4K4                      Dianna   \n",
+       "4   70491  B002E0S4UW  A3OFNY1N6I0R7A                   Fortunato   \n",
        "\n",
        "   HelpfulnessNumerator  HelpfulnessDenominator  Score        Time  \\\n",
-       "0                     0                       0      5  1306281600   \n",
-       "1                     0                       0      3  1342051200   \n",
-       "2                     0                       0      5  1298246400   \n",
-       "3                     3                       3      4  1302480000   \n",
-       "4                     4                       6      1  1263686400   \n",
+       "0                     2                       3      3  1288569600   \n",
+       "1                     1                       1      5  1323388800   \n",
+       "2                     2                       3      1  1336348800   \n",
+       "3                     0                       0      5  1346976000   \n",
+       "4                     0                       0      5  1262044800   \n",
        "\n",
-       "                                          Summary  \\\n",
-       "0                          lara bars are the best   \n",
-       "1                     Low sodium option is better   \n",
-       "2  I hope they are as good for you as they taste!   \n",
-       "3                         Stash Instant Green Tea   \n",
-       "4                                  Make your own!   \n",
+       "                                    Summary  \\\n",
+       "0                         Not what I needed   \n",
+       "1  SPIKE this with some Irish cream liqueur   \n",
+       "2                  Too little for the price   \n",
+       "3                           Drink Every Day   \n",
+       "4                         Wonderful product   \n",
        "\n",
        "                                                Text  \\\n",
-       "0  i have tried about a DOZEN different gluten fr...   \n",
-       "1  Extremely good for vitamins. Tastes a bit like...   \n",
-       "2  As far as the ingredients are concerned, the c...   \n",
-       "3  I make a \"jug\" of this tea every morning and k...   \n",
-       "4  This stuff is so bad, you may as well call it ...   \n",
+       "0  I wanted to love. I think Amy's makes lots of ...   \n",
+       "1  yes, this is flavored coffee already...but, it...   \n",
+       "2  Sounded like a cute non-present but was way to...   \n",
+       "3  I've been drinking the Chocolate Orgain for br...   \n",
+       "4  My daughter loves this applesauce. We original...   \n",
        "\n",
        "                                      SummartAndText  \n",
-       "0  lara bars are the besti have tried about a DOZ...  \n",
-       "1  Low sodium option is betterExtremely good for ...  \n",
-       "2  I hope they are as good for you as they taste!...  \n",
-       "3  Stash Instant Green TeaI make a \"jug\" of this ...  \n",
-       "4  Make your own!This stuff is so bad, you may as...  "
+       "0  Not what I neededI wanted to love. I think Amy...  \n",
+       "1  SPIKE this with some Irish cream liqueuryes, t...  \n",
+       "2  Too little for the priceSounded like a cute no...  \n",
+       "3  Drink Every DayI've been drinking the Chocolat...  \n",
+       "4  Wonderful productMy daughter loves this apples...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,12 +347,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "sampled_data.drop(inplace=True, columns=[\"ProfileName\"])\n",
-    "sampled_data.to_csv('./data/fine_foods/0.01_sampled_fine_food_reviews.csv')"
+    "sampled_data.to_csv('./data/fine_foods/0.02_sampled_fine_food_reviews.csv')"
    ]
   }
  ],
